Updates for easier debug
added _debug_ definition for easier debug class private member(tempolary set as public ifdef _debug_
added some description in serwo lib;

--- a/HexapodMiniSourceCode/.vscode/settings.json
+++ b/HexapodMiniSourceCode/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cmake.configureOnOpen": false,
     "files.associations": {
-        "array": "cpp"
+        "array": "cpp",
+        "initializer_list": "cpp"
     }
 }
